@@ -68,6 +68,7 @@ extern void vStringPut (vString *const string, const int c);
 #endif
 extern void vStringStripNewline (vString *const string);
 extern void vStringStripLeading (vString *const string);
+extern void vStringChop (vString *const string);
 extern void vStringStripTrailing (vString *const string);
 extern void vStringCatS (vString *const string, const char *const s);
 extern void vStringNCatS (vString *const string, const char *const s, const size_t length);
